maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
  keepHandOnSideWall()
  }
  prendBiscuit()
}
def KeepHandOnSideWall():Unit={
  if (estFaceMur()){
    droite()
  }
  else {avance()
    if(!murAGauche()){gauche();avance()}
  }
}
def murAGauche():Boolean={
  gauche()
  var resultat=estFaceMur()
  droite()
  return resultat
}